RESOLVED FIXED297325
Fix automatic min size handling of flex and grid items to match the specification
https://bugs.webkit.org/show_bug.cgi?id=297325
Summary Fix automatic min size handling of flex and grid items to match the specifica...
Ahmad Saleem
Reported 2025-08-13 05:17:02 PDT
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-13 05:17:13 PDT
Ahmad Saleem
Comment 2 2025-08-13 05:19:27 PDT
EWS
Comment 3 2025-08-14 11:09:42 PDT
Committed 298690@main (6ec233675a70): <https://commits.webkit.org/298690@main> Reviewed commits have been landed. Closing PR #49328 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.