Fix automatic min size handling of flex and grid items to match the specification https://bugs.webkit.org/show_bug.cgi?id=297325 rdar://158215991

Reviewed by Sammy Gill.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Inspired by: https://chromium-review.googlesource.com/c/chromium/src/+/5505559

Both the grid and flex specs mention "scroll container" already, which
means that visible and clip should behave the same:

 * https://drafts.csswg.org/css-grid/#min-size-auto
 * https://drafts.csswg.org/css-flexbox/#min-size-auto

This patch adds `Overflow: Clip` handling relevant functions.

* Source/WebCore/rendering/GridTrackSizingAlgorithm.cpp:
(WebCore::GridTrackSizingAlgorithmStrategy::minContributionForGridItem const):
* Source/WebCore/rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::shouldApplyMinSizeAutoForFlexItem const):
* LayoutTests/TestExpectations: Progressions

Canonical link: https://commits.webkit.org/298690@main